# Build-space-

./: .cursorrules  .dockerignore  .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ColonialHouseBuilder.mcpack  Dockerfile  Kings_Island.mcpack  LICENSE  README.md  SECURITY.md  alembic.ini  biome.json  calculators.html  docker-compose.yml  fly.toml  generate_pack.py  index.html  main.py  materials.html  middleware.ts  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  run_newsletter.py  setup_cron.sh  specifications.html  standards.html  sustainability.html  tsconfig.build.json  tsconfig.json  vercel.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
KoruWatch/: project.yml
alembic/: env.py
api/: cache.py  circuit_breaker.py  config.py  database.py  main.py  metrics.py  models.py
app/: globals.css  layout.tsx  page.tsx
brand/: BRAND.md  tokens.css  tokens.ts
campaign/: README.md  audiences.md  calendar.md  github-meta.md  metrics.md  positioning.md  press-kit.md
core/: __init__.py  bankroll.py  config.py  executor.py  logger.py  notifier.py  polymarket_client.py  risk.py
css/: styles.css
dashboard/: index.html
data/: __init__.py  binance_ws.py  fefco.json  materials.json  news_sources.py  polymarket_gamma.py  regulations.json  standards.json
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  PRE-LAUNCH.md  QUICKSTART.md  RESEARCH.md  ROADMAP.md  api.html
dreamhouse/: README.md
ebay-sniper/: .gitignore  README.md  pyproject.toml
ebay-sniper/src/ebay_sniper/: __init__.py  cli.py  config.py  db.py  ebay_client.py  notifier.py  scheduler.py  time_sync.py  url_parse.py
ebay-sniper/tests/: test_db.py  test_scheduler.py  test_time_sync.py  test_url_parse.py
edges/: __init__.py  base.py  crypto_lag.py  news_reactor.py  resolver_sniper.py
examples/: before-after.md  sample-newsletter.md
house_builder_BP/: manifest.json
js/: app.js  calculators.js
kings_island/: __init__.py  coaster_engine.py  config.py  geometry.py  mcfunction_writer.py  pack_builder.py  terrain.py
kings_island_BP/: manifest.json
lib/: auth.ts  db.ts  email.ts  entitlement.ts  env.ts  food-offers.ts  logger.ts  (+5 more)
nba_parlay/: .env.example  .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml  requirements.txt
nba_parlay/src/nba_parlay/: __init__.py  cli.py  config.py  features.py  parlay.py  pipeline.py  report.py
nba_parlay/src/nba_parlay/data/: __init__.py  downloader.py  odds.py  slate.py
nba_parlay/src/nba_parlay/models/: __init__.py  game.py  props.py  train.py
nba_parlay/templates/: daily_report.html.j2
nba_parlay/tests/: test_features.py  test_parlay_math.py
polybot/: .gitignore  pyproject.toml
polybot/src/polybot/: __init__.py  clock.py
polybot/src/polybot/safety/: __init__.py  drawdown_guard.py  file_switch.py  heartbeat.py  kill_switch.py
polybot/tests/: test_drawdown_guard.py  test_file_switch.py  test_heartbeat.py  test_kill_switch_manager.py
(+301 files in other folders)
