[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebay-sniper"
version = "0.1.0"
description = "A personal-use eBay auction sniper bot (CLI, Playwright-driven)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "build-space" }]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "playwright>=1.44",
    "platformdirs>=4.2",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
]

[project.scripts]
ebay-sniper = "ebay_sniper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
