[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-parlay"
version = "0.1.0"
description = "NBA prediction model and elite parlay generator with daily email reports."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Build Space" }]
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "scipy>=1.11",
    "requests>=2.31",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "python-dateutil>=2.8",
    "pyarrow>=15.0",
    "joblib>=1.3",
    "typer>=0.12",
    "rich>=13.7",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "ruff>=0.4"]

[project.scripts]
nba-parlay = "nba_parlay.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
